--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
     background-color: rgba(255, 255, 255, 0.8);
     border-top: thistle double 5px;
     border-bottom: thistle double 5px;
-    margin:0 auto;
+    margin-bottom: 1%;
 }
 span{
     font-family: 'Lily Script One', cursive;
@@ -21,7 +21,7 @@ span{
 h3{
     font-family: 'Walter Turncoat', cursive;
     color: rgb(89, 55, 89);
-    margin-top: 5%;
+    margin-top: 10%;
     font-size: 200%;
 }
 h2 {
@@ -31,9 +31,9 @@ h2 {
     background-color: rgba(255, 255, 255, 0.9);
     width: 10%;
 }
+
 .wordContainer{
 height:20%;
-/* width: auto; */
 }
 
 .letterDiv{
@@ -50,11 +50,9 @@ p{
     color:black;
     text-align: center;
     font-size:200%;
-    /* background-color:black; */
     font-family: 'Walter Turncoat', cursive;
     border-radius:30%;
     visibility: hidden;
-    /* display: inline-block; */
     position:absolute;
     bottom: 0;
     margin:0;
@@ -77,7 +75,6 @@ input {
     text-align: center;
 }
 .icecreamCone{
-    height: 35%;
     width: 35%;
     border: seashell 5px ridge;
     background-color: rgba(226, 214, 231, 0.7);
@@ -171,19 +168,20 @@ input {
     width: 200px;
     color: white;
     font-family: 'Cabin Sketch', cursive;
-    font-size: 40px;
+    font-size: 150%;
     background: radial-gradient(rgb(143, 96, 143),#703e86) ;
     border-radius: 8px;
 }
-#wordForm {
-    height:50px;
-    width: 250px;
-    font-size: 25px;
-}
+
 #clueForm {
     height:50px;
     width: 250px;
     font-size: 25px;
+}
+
+html .form1{
+    display: flex;
+    justify-content: center;
 }
 
 html #submitWord {
@@ -192,7 +190,7 @@ html #submitWord {
     color: white;
     font-family: 'Cabin Sketch', cursive;
     font-size: 40px;
-    background: radial-gradient(#85386d,#6b2255) ;
+    background: radial-gradient(rgb(143, 96, 143),#703e86) ;
     border-radius: 8px;
     margin-bottom: 0;
 }
@@ -202,13 +200,14 @@ html #submitWord {
     color: white;
     font-family: 'Cabin Sketch', cursive;
     font-size: 40px;
-    background: radial-gradient(#85386d,#6b2255) ;
+    background: radial-gradient(rgb(143, 96, 143),#703e86) ;
     border-radius: 8px;
 }
 .letterField {
     height:50px;
     width: 100px;
-    font-size: 20px;
+    font-size: 100%;
+    text-align: center;
 }
 #submitLetter {
     height:50px;
@@ -216,7 +215,7 @@ html #submitWord {
     color: white;
     font-family: 'Cabin Sketch', cursive;
     font-size: 25px;
-    background: radial-gradient(#85386d,#6b2255) ;
+    background: radial-gradient(rgb(143, 96, 143),#703e86) ;
     border-radius: 8px;
 }
 .transparent {
@@ -258,19 +257,47 @@ footer{
     text-align: right;
     margin-right: 5%;
 }
-/* nav {
+html .secret{
+    visibility: hidden;
+}
+
+html .secret2{
+    visibility: hidden;
+}
+nav {
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 html .btn-primary {
-    margin:0 auto;
-    background: radial-gradient(#85386d,#6b2255);
-    width: 10%;
-    height: 10%;
-    border: #6b2255;
-} */
+    /* margin:0 auto; */
+    background: radial-gradient(rgb(143, 96, 143),#703e86);
+    /* width: 10%;
+    height: 10%; */
+    font-family: 'Cabin Sketch', cursive;
+    font-size: 20px;
+    border: #703e86;
+}
+html .directions {
+    margin-bottom: 1%;
+    background: rgb(245, 129, 129);
+    border: rgb(231, 93, 93);
+}
 
+.btn-primary:hover {
+    background-color: rgb(183, 139, 227) !important;
+}
+html #inputPassword2{
+    font-size:20px;
+}
 
+html #form2 {
+    width: 40%;
+    margin: 0 auto;
+}
+ 
+html .modal-title {
+    font-family: 'Lily Script One', cursive;
+}
 /* used the following links for guidance on how to make shapes for the icecream cone */
 /*https://css-tricks.com/the-shapes-of-css/*/
 /*https://stackoverflow.com/questions/22415651/half-circle-with-css-border-outline-only*/
