--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ header {
     margin-bottom: 1%;
     text-align: center;
 }
+@media only screen and (min-width: 350px) {
+    header{
+        background-color: rgba(255, 255, 255); 
+    }
+}
 span{
     font-family: 'Lily Script One', cursive;
     font-size: 25px;
