--- a/style.css
+++ b/style.css
@@ -10,16 +10,11 @@ h1 {
 }
 header {
     width: auto;
-    background-color: rgba(255, 255, 255);
+    background: rgba(255, 255, 255);
     border-top: thistle double 5px;
     border-bottom: thistle double 5px;
     margin-bottom: 1%;
     text-align: center;
-}
-@media only screen and (min-width: 300px) {
-    header{
-        background-color: rgba(255, 255, 255); 
-    }
 }
 span{
     font-family: 'Lily Script One', cursive;
